Expand the skill tree to 45 skills, add security coverage, and enforce the chain
Grows the tree from 31 skills to 45 and closes a defect that had been shipping
silently: mir-frontend Gate 5 instructed the model to load mir-frontend-react-next,
-remix, -vue and -angular, none of which existed. A host that cannot resolve a skill
name loads no content and reports no error, so the gate simply did nothing.

New pillars: mir-mobile, mir-database, mir-cloud, mir-devsecops.
New tiers:   mir-backend-bun, mir-frontend-vue, mir-frontend-vanilla.
New modules: mir-frontend-react-next, mir-frontend-vue-nuxt, mir-backend-bun-hono,
             mir-mobile-android, mir-mobile-ios, mir-database-postgres,
             mir-database-mongo.

All 31 existing skills were researched against current sources and updated: stale
version floors corrected, advice that warned about since-fixed problems removed, and
a Security section added to every skill. The tree now cites 287 CVE, GHSA and RUSTSEC
identifiers, machine-verified against OSV, NVD and per-repository GitHub advisories.
Repo-scoped advisories are never mirrored to the global database, so global lookups
alone produce false negatives.

validate.py is new and is the enforcement this repo lacked. It checks the frontmatter
contract, that name and trigger agree with the directory, that every description
carries TRIGGER and SKIP text, that every mir-* name in a body resolves, that parent
tiers exist, that every references/*.md the body tells the model to read is present,
that dispatched subagent_type values exist, and that every skill has a Security
section. install.sh runs it first and refuses to install on errors. Slugs in
.mir-planned degrade from error to warning so a roadmap stays visible instead of
reading as clean.

Every cluster was then reviewed adversarially through ChatGPT Sol High and Antigravity.
243 findings were verified and applied; 120 were checked and rejected. The cloud pillar
took the heaviest correction, including a GCP 